--- a/WebApp/Pages/Movies.razor
+++ b/WebApp/Pages/Movies.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Movies"
+@using Blazored.Modal.Services
 @using WebApp.Data.FavoriteMovie
 @using WebApp.Data.Movies
 @using WebApp.Data.Users
