--- a/WebApp/Shared/NavMenu.razor
+++ b/WebApp/Shared/NavMenu.razor
@@ -1,40 +1,42 @@
-﻿@using WebApp.Pages
+﻿@using Blazored.Modal
+@using Blazored.Modal.Services
+@using WebApp.Pages
 @using WebApp.Models.Authentication
 @inject IModalService Modal
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject NavigationManager NavigationManager
 
 
-    <div class="collapseNav">
-        <div class="top-row navbar navbar-dark">
-            <div class="container-fluid">
-                <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
+<div class="collapseNav">
+    <div class="top-row navbar navbar-dark">
+        <div class="container-fluid">
+            <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
     </div>
+</div>
 
-    <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-        <nav class="navbar navbar-expand-sm">
+<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+    <nav class="navbar navbar-expand-sm">
 
-            <div class="nav-item px-3">
-                <a class="nav-link" href="Movies">
-                    <i class="bi bi-film"></i> Movies
-                </a>
-            </div>
+        <div class="nav-item px-3">
+            <a class="nav-link" href="Movies">
+                <i class="bi bi-film"></i> Movies
+            </a>
+        </div>
 
-            <div class="nav-item px-3">
-                <a class="nav-link" href="Actors">
-                    <i class="bi bi-person-video2"></i> Actors
-                </a>
-            </div>
+        <div class="nav-item px-3">
+            <a class="nav-link" href="Actors">
+                <i class="bi bi-person-video2"></i> Actors
+            </a>
+        </div>
 
-            <div class="nav-item px-3">
-                <a class="nav-link" href="Statistics">
-                    <i class="bi bi-bar-chart-line"></i> Statistics
-                </a>
-            </div>
+        <div class="nav-item px-3">
+            <a class="nav-link" href="Statistics">
+                <i class="bi bi-bar-chart-line"></i> Statistics
+            </a>
+        </div>
         <div class="nav-item px-3">
             <a class="nav-link" href="Favorites">
                 <i class="bi bi-person-plus-fill"></i> Browse Favorites Lists
@@ -49,21 +51,21 @@
         </AuthorizeView>
         <AuthorizeView>
             <Authorized>
-                      <div class="nav-item px-3">
-                        <a class="nav-link" role="link" @onclick="PerformLogout">
-                            <i class="bi bi-box-arrow-in-right"></i>Log out
-                        </a>
-                     </div>
-                 </Authorized>
-                
-                <NotAuthorized>
                 <div class="nav-item px-3">
-                    <a  role="link" class="nav-link" @onclick="ShowModal">
-                        <i class="bi bi-box-arrow-in-right"></i> Log in 
+                    <a class="nav-link" role="link" @onclick="PerformLogout">
+                        <i class="bi bi-box-arrow-in-right"></i>Log out
                     </a>
                 </div>
-                </NotAuthorized>
-           </AuthorizeView> 
+            </Authorized>
+
+            <NotAuthorized>
+                <div class="nav-item px-3">
+                    <a role="link" class="nav-link" @onclick="ShowModal">
+                        <i class="bi bi-box-arrow-in-right"></i> Log in
+                    </a>
+                </div>
+            </NotAuthorized>
+        </AuthorizeView>
     </nav>
 </div>
 
@@ -90,11 +92,11 @@
 
     void ShowModal()
     {
-        var options = new ModalOptions() 
-        { 
-            Animation = ModalAnimation.FadeInOut(0.3),
-            HideHeader = true
-        };
+        var options = new ModalOptions()
+            {
+                Animation = ModalAnimation.FadeInOut(0.3),
+                HideHeader = true
+            };
         Modal.Show<Login>("Log in", options);
     }
 }
