--- a/WebApp/Shared/NavMenu.razor
+++ b/WebApp/Shared/NavMenu.razor
@@ -19,27 +19,26 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <nav class="navbar navbar-expand-sm">
-
+        <AuthorizeView>
+            <div class="nav-item px-3">
+                <a class="nav-link" href="Favorites">
+                    <i class="bi bi-globe"></i> Browse Favorites Lists
+                </a>
+            </div> 
+        </AuthorizeView>
         <div class="nav-item px-3">
-            <a class="nav-link" href="Movies">
-                <i class="bi bi-film"></i> Movies
+            <a class="nav-link" href="Statistics">
+                <i class="bi bi-bar-chart-line"></i> Statistics
             </a>
-        </div>
-
+        </div>       
         <div class="nav-item px-3">
             <a class="nav-link" href="Actors">
                 <i class="bi bi-person-video2"></i> Actors
             </a>
         </div>
-
         <div class="nav-item px-3">
-            <a class="nav-link" href="Statistics">
-                <i class="bi bi-bar-chart-line"></i> Statistics
-            </a>
-        </div>
-        <div class="nav-item px-3">
-            <a class="nav-link" href="Favorites">
-                <i class="bi bi-person-plus-fill"></i> Browse Favorites Lists
+            <a class="nav-link" href="Movies">
+                <i class="bi bi-film"></i> Movies
             </a>
         </div>
         <AuthorizeView>
